# learning-sdl

./: .gitignore  CMakeLists.txt  vcpkg_rf.txt
include/: animated_sprite.hpp  dot.hpp  game.hpp  input.hpp  label.hpp  particle.hpp  sprite.hpp  timer.hpp  vector2.hpp  vector4.hpp  window.hpp
src/: animated_sprite.cpp  dot.cpp  game.cpp  input.cpp  label.cpp  main.cpp  particle.cpp  sprite.cpp  timer.cpp  window.cpp
